# cookiecutter-pyproject

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: conftest.py  test_install.py
{{cookiecutter.pkg_slug}}/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
