[tool.poetry]
name = "Cookiecutter pyproject"
version = "0.1.0"
description = "A simple template for pyproject.toml"
authors = ["Emmanuel Roux"]
license = "BSD-3"
readme = "README.md"
keywords = []

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
cookiecutter = "^1.7.2"
pre-commit = "^2.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "*"
bandit = "*"
black = "*"
isort = { version = "*", extras = ["pyproject"] }
pylint = "*"
pytest = "*"
safety = "*"
watermark = "*"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true

[tool.pylint.options]
disable = """
  bad-continuation,
  too-many-lines,
  too-many-public-methods,
  too-many-locals,
  too-many-statements,
  too-many-arguments,
  too-many-instance-attributes,
  too-many-branches,
  too-few-public-methods,
  duplicate-code
"""
max-line-length = "120"
