[tool.poetry]
name = "Cookiecutter pyproject"
version = "0.1.0"
description = "A simple template for pyproject.toml"
authors = ["Emmanuel Roux"]
license = "BSD-3"
readme = "README.md"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
cookiecutter = "^1.7.2"
pre-commit = "^2.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
bandit = "^1.6.2"
black = "^20.8b1"
isort = {extras = ["pyproject"], version = "^5.6.4"}
pylint = "^2.6.0"
pytest = "^6.1.2"
safety = "^1.9.0"
watermark = "^2.1.0"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true

[tool.pylint.options]
disable = """
  bad-continuation,
  too-many-lines,
  too-many-public-methods,
  too-many-locals,
  too-many-statements,
  too-many-arguments,
  too-many-instance-attributes,
  too-many-branches,
  too-few-public-methods,
  duplicate-code
"""
max-line-length = "120"
