[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.pkg_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
keywords = []
packages = [ { include = "{{ cookiecutter.pkg_slug }}" } ]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
bandit = "^1.6.2"
black = "^20.8b1"
{% if cookiecutter["add_coverage"] == "y" %}
coverage = "^5.3"
{% endif %}
ipython = "^7.19.0"
isort = {extras = ["pyproject"], version = "^5.6.4"}
pylint = "^2.6.0"
pytest = "^6.1.2"
{% if cookiecutter["add_coverage"] == "y" %}
pytest-cov = "^2.10.1"
{% endif %}
pre-commit = "^2.9.2"
jedi-language-server = "^0.21.0"
python-language-server = "^0.36.1"
safety = "^1.9.0"
watermark = "^2.1.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true

[tool.pylint.options]
disable = """
  bad-continuation,
  too-many-lines,
  too-many-public-methods,
  too-many-locals,
  too-many-statements,
  too-many-arguments,
  too-many-instance-attributes,
  too-many-branches,
  too-few-public-methods,
  duplicate-code
"""
max-line-length = "120"
